# ROS-UAV-Planner

./: Readme
log/: latest_list
my_uav_interfaces/: CMakeLists.txt  package.xml
my_uav_interfaces/msg/: OptimizeCommand.msg  UAVCollection.msg
my_uav_interfaces/srv/: GenerateUAVs.srv
uav_coverage/: package.xml  setup.cfg  setup.py
uav_coverage/uav_coverage/: task1_client.py  task1_server.py  task2_manager.py  task2_optimizer.py  task2_visualizer.py
